add impute rating

--- a/Churn_prediction.ipynb
+++ b/Churn_prediction.ipynb
@@ -1216,6 +1216,7 @@
     "import pandas as pd\n",
     "import sklearn\n",
     "import matplotlib.pyplot as plt\n",
+    "from pandas.tools.plotting import scatter_matrix\n",
     "\n",
     "file_path = '/Users/haowei/Documents/gal/Day37_case_study2/case_study2/Churn/churn_train.csv'\n",
     "def import_data(file_path):\n",
@@ -1601,8 +1602,22 @@
     "    df.drop('avg_rating_of_driver', axis = 1, inplace =True)\n",
     "    return df\n",
     "newdf = add_rating_cat(fullData)\n",
-    "newdf.head()"
+    "newdf.head()\n",
+    "\n",
+    "def impute_rating(df):\n",
+    "    condition = df['avg_rating_of_driver'].isnull() \n",
+    "    df.ix[condition, 'avg_rating_of_driver'] = 0.5*df['avg_rating_of_driver'].mean()\n",
+    "    return df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
